--- a/.classpath
+++ b/.classpath
@@ -17,10 +17,11 @@
         path="webApplication/WEB-INF/lib/xmlsec.jar" sourcepath="/Shibboleth/lib/xml-sec-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-jce-jdk13-114.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
-    <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
-    <classpathentry kind="lib" path="lib/junit-3.8.1.jar" rootpath="" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
+    <classpathentry kind="lib" path="lib/junit-3.8.1.jar" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
+    <classpathentry kind="lib" path="lib/bcprov-jdk14-117.jar" sourcepath="/Shibboleth/lib/bcprov-jdk14-117-src.jar"/>
+    <classpathentry kind="var" path="JAVA_HOME/jre/lib/jce.jar"/>
+    <classpathentry kind="var" path="JAVA_HOME/jre/lib/jsse.jar"/>
+    <classpathentry kind="lib" path="lib/log4j-1.2.5.jar" rootpath="" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
