Add source for xerces.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@416 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -17,9 +17,10 @@
     <classpathentry kind="lib" path="lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug-1.0.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan-2.4.1.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xercesImpl-2.2.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xml-apis-2.4.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlParserAPIs-2.2.1.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec-1.0.5.jar"/>
+    <classpathentry kind="lib" path="lib/xercesImpl-2.2.1.jar"
+        rootpath="" sourcepath="/Shibboleth/lib/xercesImpl-2.2.1-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
