More AA converstion to java properties configuration.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@436 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/conf/origin.properties
+++ b/webApplication/WEB-INF/conf/origin.properties
@@ -1,12 +1,14 @@
-edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path=/WEB-INF/conf/arps
+edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /WEB-INF/conf/arps
 
-edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation=edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
+edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = \
+	edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
 
-edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName=shib2.internet2.edu
+edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
+edu.internet2.middleware.shibboleth.aa.AAServlet.ldapUserDnPhrase = uid=
 
 java.naming.factory.initial=edu.internet2.middleware.shibboleth.aaLocal.EchoCtxFactory
 
-#java.naming.provider.url=ldap://shib2.internet2.edu/ou=People,dc=internet2,dc=edu
-#java.naming.security.principal=
-#java.naming.security.credentials=
+#java.naming.provider.url = ldap://shib2.internet2.edu/ou=People,dc=internet2,dc=edu
+#java.naming.security.principal =
+#java.naming.security.credentials =
 
