--- a/webApplication/WEB-INF/conf/origin.properties
+++ b/webApplication/WEB-INF/conf/origin.properties
@@ -1,5 +1,6 @@
-edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /WEB-INF/conf/arps
-
+#Full Path to ARP repository
+#edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = \
+	/opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
 edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = \
 	edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
 
