Started to convert HS to new handle repository interface.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@441 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/conf/origin.properties
+++ b/webApplication/WEB-INF/conf/origin.properties
@@ -1,15 +1,24 @@
 #Full Path to ARP repository
 #edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = \
-	/opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
+#	/opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
 edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = \
 	edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
 
 edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
 edu.internet2.middleware.shibboleth.aa.AAServlet.ldapUserDnPhrase = uid=
-
+#edu.internet2.middleware.shibboleth.aa.arp.BaseArpRepository.ArpTTL = 300000
 java.naming.factory.initial=edu.internet2.middleware.shibboleth.aaLocal.EchoCtxFactory
 
+#java.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory
 #java.naming.provider.url = ldap://shib2.internet2.edu/ou=People,dc=internet2,dc=edu
 #java.naming.security.principal =
 #java.naming.security.credentials =
 
+#edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = \
+#	edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository
+	
+edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = \
+	edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository
+	
+edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 1800000
+edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
