Moved HS configuration to java Properties. Various refactorings and cleanups.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@445 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/conf/origin.properties
+++ b/webApplication/WEB-INF/conf/origin.properties
@@ -22,3 +22,13 @@ edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = \
 	
 edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 1800000
 edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
+edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /WEB-INF/conf/keystore.jks
+edu.internet2.middleware.shibboleth.hs.HandleServlet.authenticationDomain = shibdev.edu
+edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://66.108.96.194/shibboleth/AA
+edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePassword = shibhs
+edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyAlias = shibhs
+edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyPassword = shibhs
+#default is to use key alias
+#edu.internet2.middleware.shibboleth.hs.HandleServlet.certAlias = shibhs
+
+
