--- a/webApplication/WEB-INF/conf/origin.properties
+++ b/webApplication/WEB-INF/conf/origin.properties
@@ -1,8 +1,6 @@
 #Full Path to ARP repository
-#edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = \
-#	/opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
-edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = \
-	edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
+#edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
+edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
 
 edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
 edu.internet2.middleware.shibboleth.aa.AAServlet.ldapUserDnPhrase = uid=
@@ -14,17 +12,19 @@ java.naming.factory.initial=edu.internet2.middleware.shibboleth.aaLocal.EchoCtxF
 #java.naming.security.principal =
 #java.naming.security.credentials =
 
-#edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = \
-#	edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository
+edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository
+edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStoreKeyPassword = shibhs
+edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStoreKeyAlias = handleKey
+#edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStorePath =
+edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStorePassword = shibhs
+
+#edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository
 	
-edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = \
-	edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository
-	
-edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 1800000
+edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
 edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
 edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /WEB-INF/conf/keystore.jks
 edu.internet2.middleware.shibboleth.hs.HandleServlet.authenticationDomain = shibdev.edu
-edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://66.108.96.194/shibboleth/AA
+edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://snc.cc.columbia.edu/shibboleth/AA
 edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePassword = shibhs
 edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyAlias = shibhs
 edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStoreKeyPassword = shibhs
