Moved ARP config to Classpath.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@472 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/classes/conf/origin.properties
+++ b/webApplication/WEB-INF/classes/conf/origin.properties
@@ -1,5 +1,5 @@
 #Full Path to ARP repository
-#edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /opt/local/tomcat/webapps/shibboleth/WEB-INF/conf/arps/
+edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository.Path = /conf/arps/
 edu.internet2.middleware.shibboleth.aa.arp.ArpRepository.implementation = edu.internet2.middleware.shibboleth.aa.arp.provider.FileSystemArpRepository
 
 edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
