Config to Classpath.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@475 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/classes/conf/origin.properties
+++ b/webApplication/WEB-INF/classes/conf/origin.properties
@@ -23,7 +23,7 @@ edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStoreP
 	
 edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
 edu.internet2.middleware.shibboleth.hs.HandleServlet.issuer = shib2.internet2.edu
-edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /WEB-INF/conf/keystore.jks
+edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePath = /conf/keystore.jks
 edu.internet2.middleware.shibboleth.hs.HandleServlet.authenticationDomain = shibdev.edu
 edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://snc.cc.columbia.edu/shibboleth/AA
 edu.internet2.middleware.shibboleth.hs.HandleServlet.keyStorePassword = shibhs
