Accidentally committed my test version.  Fixed.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@476 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/classes/conf/log4j.properties
+++ b/webApplication/WEB-INF/classes/conf/log4j.properties
@@ -5,13 +5,23 @@
 ##
 
 
-#
+# Default configuration.  Sends logging output to STDOUT.
 
-log4j.rootCategory=DEBUG, stdout
+log4j.rootCategory=WARN, stdout
 log4j.logger.org.apache.xml.security=OFF
+log4j.logger.org.opensaml=OFF
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-5p %-41X{serviceId} %d{ISO8601} (%c:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-5p %-41X{serviceId} %d{ISO8601} - %m%n
+
+
+# The following block represents an example of how to enable very verbose logging.
+
+#log4j.rootCategory=DEBUG, stdout
+#log4j.logger.org.apache.xml.security=OFF
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%-5p %-41X{serviceId} %d{ISO8601} (%c:%L) - %m%n
 
 
 # The following block represents an example of how to direct logging output to a file.
