Added policy URI to example config file.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@482 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/classes/conf/origin.properties
+++ b/webApplication/WEB-INF/classes/conf/origin.properties
@@ -121,6 +121,10 @@
    # [Optional] Time in milliseconds for which issued AQHs are valid (Defaults to 1800000 or 30 minutes)
    #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
 
+##### Club Configuration #####
+
+ # [Optional] URIs that define club policy, separated by commas (defaults to the InCommon pilot policy)
+ #edu.internet2.middleware.shibboleth.audiences = urn:mace:InCommon:pilot:2003, urn:example:com:exampleClub
 
 
 
