--- a/webApplication/WEB-INF/classes/conf/origin.properties
+++ b/webApplication/WEB-INF/classes/conf/origin.properties
@@ -98,15 +98,15 @@
  edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository
  #edu.internet2.middleware.shibboleth.hs.HandleRepository.implementation = edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository
 
-   ### edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository ###
+   ### Parameters for edu.internet2.middleware.shibboleth.hs.provider.MemoryHandleRepository ###
 
    # [Optional] Time in milliseconds for which issued AQHs are valid (Defaults to 1800000 or 30 minutes)
    #edu.internet2.middleware.shibboleth.hs.BaseHandleRepository.handleTTL = 10000
 
-   ### edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository ###
+   ### Parameters for edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository ###
 	
-   # [Required if active] Location of a Java keystore containing an X509 certificate
-   # and matching key.  Used to encrypt the principal's identifiers
+   # [Required if active] Location of a Java keystore containing a Triple DES secret key.  
+   # Used to encrypt the principal's identifiers
    #edu.internet2.middleware.shibboleth.hs.provider.CryptoHandleRepository.keyStorePath = /conf/handle.jks
 
    # [Required if active] Password for the keystore
