Added pass-through logging option to AA.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@491 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/classes/conf/origin.properties
+++ b/webApplication/WEB-INF/classes/conf/origin.properties
@@ -46,6 +46,11 @@
 
  # [Required] Name of this Attribute Authority (usually a dns name)
  #edu.internet2.middleware.shibboleth.aa.AAServlet.authorityName = shib2.internet2.edu
+ 
+ # [Optional] Set to true if the Attribute Authority should pass internal error messages to 
+ # the SHAR (for debugging purposes) (defaults to false)
+ #edu.internet2.middleware.shibboleth.aa.AAServlet.passThruErrors = false
+ 
 
 
 ##### Data Source #####
