--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
     <classpathentry kind="src" path="src"/>
-    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
+    <classpathentry kind="src" path="tests"/>
+    <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
     <classpathentry kind="lib"
@@ -23,5 +24,5 @@
     <classpathentry kind="lib" path="lib/xercesImpl-2.2.1.jar" sourcepath="/Shibboleth/lib/xercesImpl-2.2.1-src.jar"/>
     <classpathentry kind="lib" path="lib/ant-1.5.1.jar"/>
     <classpathentry kind="lib" path="lib/ant-optional-1.5.1.jar"/>
-    <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
+    <classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
