Ummmm... don't want people accidentally making shib requests to my workstation all the time.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@516 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -13,7 +13,7 @@
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.authenticationDomain = shibdev.edu
 
  # [Required] URL at which the corresponding Attribute Authority can be reached
- #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://snc.cc.columbia.edu/shibboleth/AA
+ #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://host.test.edu/shibboleth/AA
 
 
 ##### Assertion Signing #####
