--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,6 @@
         path="webApplication/WEB-INF/lib/commons-digester.jar" sourcepath="/Shibboleth/lib/commons-digester-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
-    <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
     <classpathentry kind="lib" path="lib/junit-3.8.1.jar" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
     <classpathentry kind="lib" path="lib/bcprov-jdk14-117.jar" sourcepath="/Shibboleth/lib/bcprov-jdk14-117-src.jar"/>
@@ -24,5 +23,6 @@
     <classpathentry kind="lib" path="lib/xercesImpl-2.2.1.jar" sourcepath="/Shibboleth/lib/xercesImpl-2.2.1-src.jar"/>
     <classpathentry kind="lib" path="lib/ant-1.5.1.jar"/>
     <classpathentry kind="lib" path="lib/ant-optional-1.5.1.jar"/>
+    <classpathentry kind="lib" path="lib/servlet-2.3.jar"/>
     <classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
