Don't automatically generate a secret key on dist build.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@537 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -81,12 +81,12 @@
 
     <!-- Create various product distributions and move them to ${dist} -->
 
-    <target name="dist-all" depends="compile, genSecret, test-all, package-all, clean-build" />
+    <target name="dist-all" depends="compile, test-all, package-all, clean-build" />
     <target name="package-all">
         <war warfile="${dist}/${distname}.war" webxml="${configroot}/all.xml" basedir="${approot}" update="no" />
     </target>
 
-    <target name="dist-origin" depends="compile, genSecret, test-origin, package-origin, clean-build" />
+    <target name="dist-origin" depends="compile, test-origin, package-origin, clean-build" />
     <target name="package-origin">
         <war warfile="${dist}/${distname}.war" webxml="${configroot}/origin.xml" basedir="${approot}" update="no" />
     </target>
