--- a/src/conf/origin.properties
+++ b/src/conf/origin.properties
@@ -15,6 +15,8 @@
  # [Required] URL at which the corresponding Attribute Authority can be reached
  #edu.internet2.middleware.shibboleth.hs.HandleServlet.AAUrl = http://host.test.edu/shibboleth/AA
 
+ # [Optional] HTTP Request Header to get principal name from (defaults to REMOTE_USER)
+ #edu.internet2.middleware.shibboleth.hs.HandleServlet.username = REMOTE_USER
 
 ##### Assertion Signing #####
 
